<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:paddingBottom="8dp"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@color/pintColor"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/episodes_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="@dimen/headline_text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/episodes"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="@dimen/body_text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@color/aquamarineColor"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/hours_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="@dimen/headline_text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hours"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="@dimen/body_text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@color/lightBlueColor"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/day_count_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="@dimen/headline_text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/days"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="@dimen/body_text" />
    </LinearLayout>

</LinearLayout>